--- a/view/TeamsTable.fxml
+++ b/view/TeamsTable.fxml
@@ -12,10 +12,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.*?>
-<?import javafx.geometry.Insets?>  
+<?import javafx.geometry.Insets?> 
+<?import javafx.scene.control.Label.*?>
 
-<VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1"  styleClass="background">
-   
+
+<VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1"  styleClass="background"
+ fx:controller="controller.TeamsController">
+
+ <Label fx:id="teamField" text="All Teams" alignment="center" style="label-h2"/>
+ <ListView fx:id="teamsLv" items="${controller.teams.currentTeams}" prefWidth="200" prefHeight="300"  style="list-view"/>
+ <HBox spacing="10">
+    <Button fx:id="addButton" text="Add" onAction="#handleAdd"/>
+    <Button fx:id="manageButton" text="Manage"/>
+    <Button fx:id="deleteButton" text="Delete"/>
+    <Button fx:id="closeButton" text="Close" onAction="#close"/>
+</HBox>
     
     <stylesheets>
         <URL value="@style.css"/>
