--- a/view/TeamsTable.fxml
+++ b/view/TeamsTable.fxml
@@ -19,7 +19,7 @@
 <VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1"  styleClass="background"
  fx:controller="controller.TeamsController">
 
- <Label fx:id="teamField" text="All Teams" alignment="center" style="label-h2"/>
+ <Label text="All Teams" style="text-out" alignment="center" />
  <ListView fx:id="teamsLv" items="${controller.teams.currentTeams}" prefWidth="200" prefHeight="300"  style="list-view"/>
  <HBox spacing="10">
     <Button fx:id="addButton" text="Add" onAction="#handleAdd"/>
