--- a/view/SeasonRoundView.fxml
+++ b/view/SeasonRoundView.fxml
@@ -15,7 +15,8 @@
 <?import javafx.geometry.Insets?> 
 <?import javafx.scene.layout.GridPane?> 
 
-<VBox styleClass="background"  alignment="CENTER" prefHeight="400" prefWidth="800" spacing="20" xmlns:fx="http://javafx.com/fxml/1">
+<VBox styleClass="background"  alignment="CENTER" prefHeight="400" prefWidth="800" spacing="20" xmlns:fx="http://javafx.com/fxml/1"
+fx:controller="controller.TeamsRoundController">
     
     
     <stylesheets>
