--- a/view/ManageTeamView.fxml
+++ b/view/ManageTeamView.fxml
@@ -30,8 +30,8 @@ fx:controller="controller.ManageTeamController">
     </columns>
     </TableView>
     <HBox>
-    <Button fx:id="addButton" text="Add" styleClass="Button" />
-    <Button fx:id="updateButton" text="Update" styleClass="Button"/>
+    <Button fx:id="addButton" text="Add" styleClass="Button" onAction="#add"/>
+    <Button fx:id="updateButton" text="Update" styleClass="Button" onAction="#update"/>
     <Button fx:id="deleteButton" text="Delete" styleClass="Button"/>
     <Button fx:id="saveCloseButton" text="Save and Close" styleClass="Button"/>
     </HBox>
