--- a/view/CurrentRoundTeams.fxml
+++ b/view/CurrentRoundTeams.fxml
@@ -17,6 +17,17 @@
 
 <VBox styleClass="background"  alignment="CENTER" prefHeight="300" prefWidth="400" spacing="20" xmlns:fx="http://javafx.com/fxml/1" 
 fx:controller="controller.CurrentRoundTeamsController">
+<Label fx:id="round" text="Round" styleClass="label-header"/>
+<HBox alignment="center" spacing="20">
+<TableView fx:id="currentRounds" styleClass="table-view" prefHeight="300" prefWidth="280">
+<columns>
+    <TableColumn fx:id="column1" text="Team" prefWidth="85"/>
+    <TableColumn fx:id="column2" prefWidth="85"/>
+    <TableColumn fx:id="column3" text="Team" prefWidth="85"/>
+</columns>
+</TableView>
+</HBox>
+<Button fx:id="closeButton" styleClass="button" text="Close" onAction="#close"/>
    
     <stylesheets>
         <URL value="@style.css"/>
