--- a/view/SeasonRoundView.fxml
+++ b/view/SeasonRoundView.fxml
@@ -18,14 +18,14 @@
 <VBox styleClass="background"  alignment="CENTER" prefHeight="400" prefWidth="800" spacing="20" xmlns:fx="http://javafx.com/fxml/1"
 fx:controller="controller.TeamsRoundController">
     <Label fx:id="round" text="Round" styleClass="label-header"/>
-    <HBox spacing="10">
+    <HBox alignment="center" spacing="10">
     <ListView prefWidth="200" prefHeight="600" fx:id="teamsLv" styleClass="list-view"/>
     <Button fx:id="activateButton" styleClass="button" text=">>>" onAction="#activate"/>
-    <TableView prefWidth="400" prefHeight="600" fx:id="teamsAddedTv" styleClass="table-view">
+    <TableView prefWidth="350" prefHeight="600" fx:id="teamsAddedTv" styleClass="table-view">
     <columns>
-        <TableColumn fx:id="rounds" text="Game" prefWidth="128"/>
-        <TableColumn fx:id="team1" text="Team-1" prefWidth="128"/>
-         <TableColumn fx:id="team2" text="Team-2" prefWidth="128"/>
+        <TableColumn fx:id="rounds" text="Game" prefWidth="120"/>
+        <TableColumn fx:id="team1" text="Team-1" prefWidth="120"/>
+        <TableColumn fx:id="team2" text="Team-2" prefWidth="120"/>
     </columns>
     </TableView>
     </HBox>
